# veritas

./: .dockerignore  .env.example  .gitignore  .gitmodules  .importlinter  04-通用软件工程方法论提示词.md  AGENTS.md  AUDIT_OUTPUT_LAYOUT.md  CHANGELOG.md  CLAUDE.md  CodeMAP.md  DEPLOYMENT.md  Dataflow.md  Dockerfile  Dockerfile.dev  E2E_TESTING_SOP.md  E2E_TEST_REPORT.md  ELIS_REUSE_DECISIONS.md  GPU_DEVELOPMENT_GUIDE.md  LLM_CALLS.md  Makefile  OPTIMIZATION_BACKLOG.md  OUTPUT_STRUCTURE.md  PRD_GAP.md  PRD_GROUND_TRUTH_PIPELINE.md  README.md  ROADMAP.md  TEST_AUDIT_VISUAL_FORENSICS.md  TODO.md  UI UX 体验必知.md  VISUAL_OVERLAP_PRD.md  WEB_EVIDENCE_LANES_ELIS_PLAN.md  audit_test.md  docker-compose.dev.yml  docker-compose.yml  opencode.json  pipeline.md  progress.md  pyproject.toml  pyrightconfig.json  (+2 more)
.claude/commands/: deslop.md
.codegraph/: .gitignore
.github/workflows/: audit-smoke.yml  ci.yml
capabilities/: capability_catalog.yaml
cli/: README.md  __init__.py  main.py
cli/commands/: audit_paper.py  precheck.py  report.py  run.py
configs/: audit_roles.yaml  reverification_pricing.yml
configs/methodology/: bioinfo.md  biomed-wetlab.md  general.md  source-data.md  visual-forensics.md
configs/opencode/: README.md  biomed-research-audit-methodology.md  server.env.example  veritas-agent.md
deploy/: Dockerfile  Dockerfile.dev  cloudflare.md  docker-compose.cloudflare.yml  docker-compose.forensics.yml  docker-compose.local-db.yml  docker-compose.yml
doc/: veritas-linus-code-review_codex.md
docs/architecture/: DESLOP_SOP.md
docs/demos/: gap_analysis.md  gap_analysis_v2.md  next_step_prd.md
docs/product/: Veritas-ELIS视觉取证增强-初步PRD.md  Veritas-鉴权与多用户支持PRD.md
engine/: _logging.py  env.py  exceptions.py
engine/claims/: matchers.py
engine/embeddings/: __init__.py  indexer.py  sscd.py
engine/follow_up/: __init__.py  generator.py  prompts.py  templates.py
engine/ground_truth/: __init__.py  anti_overfit.py  design_spec.py  gap_analyzer.py  mapper.py  parser.py
engine/investigation/: _shared.py  agent_models.py  agent_step_runner.py  context_pack.py  opencode_agent.py  planner.py  review_material.py  role_runners.py  validators.py
engine/llm/: __init__.py  client.py
engine/repo_intel/: scanner.py
engine/reporting/: layers.py  models.py  render_html.py  render_json.py  renderers.py  text_generator.py
engine/shared/: __init__.py  constants.py  helpers.py  types.py
engine/static_audit/: __init__.py  _pipeline_steps.py  _shared.py  audit_config.py  certainty_enrichment.py  cli_driver.py  figure_classification.py  grade_engine.py  html_report.py  investigation.py  investigation_dispatch.py  investigation_tools.py  materials.py  models.py  orchestrator.py  paths.py  pipeline.py  protocol.py  report.py  report_id.py  roles.py  run_diagnostics.py  run_steps.py  step_labels.py  verify_store.py  visual_constants.py  visual_pipeline.py  visual_schemas.py
engine/tasks/: __init__.py  _task_orm.py  audit_task.py  celery_app.py  embedding_task.py  process_cleanup.py  stale_run_watchdog.py
engine/tools/: registry.py
engine/workflows/: execution_verify.py  precheck.py
examples/bioinfo_python_case/: manuscript.txt  results.csv  train.py  veritas.json
examples/bioinfo_r_case/: README.md
ground_truth/: ground_truth_paper3_.md  ground_truth_paper_1.md  ground_truth_paper_2.md
ground_truth/paper2/: annotations.yaml
prd/: opencode-agent-function-runtime.md
protocols/: __init__.py
protocols/bioinfo_python/: __init__.py  checks.py  protocol.py
protocols/bioinfo_r/: __init__.py  checks.py  protocol.py
protocols/common/: __init__.py  manifest_schema.py  verification_levels.py
runtime/: README.md  __init__.py
runtime/artifacts/: __init__.py
runtime/executors/: base.py  docker_executor.py  subprocess_executor.py
runtime/jobs/: __init__.py  models.py
runtime/policies/: __init__.py
scripts/: README.md  build-elis-provenance.sh  build_tool_contract.py  check_prompts.py  dev-start.sh  dev-stop.sh  dev.sh  diag.sh  download_panel_extraction_models.sh  exact_image_duplicates.py  image_similarity_candidates.py  init_admin.sh  init_db.py  lock_prompts.py  migrate_async_audit.py  migrate_cases_to_operator.py  migrate_web_data_to_postgres.py  opencode-docker.sh  opencode-server.sh  prod_diagnose.py  run_paper_audit.py  setup_env_permissions.sh  source_data_findings.py  source_data_pair_forensics.py  source_data_profile.py  verify_deployment.sh
tests/: README.md  conftest.py
tests/e2e/: test_audit_paper_static_bundle.py  test_cbir_provenance.py  test_cli_smoke.py
web/: README.md  __init__.py
(+386 files in other folders)
