[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas"
version = "0.1.0"
description = "Prototype verification engine for computational research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "pyyaml>=6.0.3",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "scikit-image>=0.21.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gdown>=5.2.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.scripts]
veritas = "cli.main:main"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["cli*", "engine*", "runtime*", "protocols*", "web*"]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
exclude = ["engine/static_audit/upstream"]

[tool.ruff.lint.per-file-ignores]
"engine/static_audit/orchestrator.py" = ["E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
